<resources>
    <string name="latitude_map" translatable="false">latitude</string>
    <string name="longitude_map" translatable="false">longitude</string>
    <string name="img_map" translatable="false">img</string>
    <string name="name_map" translatable="false">name</string>
    <string name="specificItemClickPosition" translatable="false">specificItemClickPosition</string>
    <string name="activity_name" translatable="false">activity</string>
    <string name="pharmacy_position" translatable="false">position</string>
    <string name="CURRENT_MODE" translatable="false">Current Application User Mode</string>
    <string name="default_image_profile" translatable="false"><![CDATA[https://firebasestorage.googleapis.com/v0/b/rare-medicine.appspot.com/o/pharmacyProfile%2Flogonew.png?alt=media&token=bdce162d-fffc-42a7-baaa-dffb401cb2dc]]></string>
    <string name="medicine_id" translatable="false">medicine id</string>


    <string name="app_name">Rare Medicine</string>
    <string name="med_exist">This medicine is already exist</string>
    <string name="med_add_success">This medicine was successfully added </string>
    <string name="med_not_exist">This medicine isn\'t exist in our system</string>
    <string name="error_search">Faild To search</string>
    <string name="no_med_in_firebase">No Medicine Available now</string>
    <string name="title_activity_mode_switch">ModeSwitch</string>
    <string name="successful_request">Request sent successfully</string>
    <string name="failed_request">Failed to send Request</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_pharmacy_map">Map</string>

    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password?</string>

    <string name="splash_screen">Splash screen</string>

    <string name="next">Next</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="pharmacist">Pharmacist</string>
    <string name="search_medicine">Search medicine</string>
    <string name="verify">Verify your email.</string>
    <string name="resend_verification">Resend verification</string>
    <string name="logout">Log out</string>
    <string name="pharmacy_name">Pharmacy Name<font color="#ff0000">*</font></string>
    <string name="address">Address</string>
    <string name="pharmacy_phone">Pharmacy Phone</string>
    <string name="mark_your_pharmacy_postion_on_map">Mark Your Pharmacy Position On Map<font color="#ff0000">*</font></string>
    <string name="optional_data">Optional Data:</string>
    <string name="confirm_password">Confirm Password<font color="#ff0000">*</font></string>
    <string name="password">Password<font color="#ff0000">*</font></string>
    <string name="email">Email<font color="#ff0000">*</font></string>
    <string name="barcode_icon">barcode icon</string>
    <string name="search_by_medicine_name">Search By Medicine Name</string>


</resources>
