<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.abdoamin.RareMedicine.activity.LogInActivity">

    <EditText
        android:id="@+id/log_in_email_editText"
        android:layout_width="264dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/log_in_password_editText"
        android:layout_width="264dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password_login"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_email_editText" />

    <Button
        android:id="@+id/log_in_log_in_btn"
        android:text="@string/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/log_in_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/log_in_password_editText"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/log_in_sign_up_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/signup_open_activity"
        app:layout_constraintEnd_toEndOf="@+id/log_in_password_editText"
        app:layout_constraintTop_toBottomOf="@+id/log_in_password_editText" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="235dp"
        android:layout_height="151dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_small" />

</android.support.constraint.ConstraintLayout>
